<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:scrollbars="none"
    tools:context=".ui.quiz.QuizActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progress_horizontal"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:progressDrawable="@drawable/progress_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:elevation="3dp"
            android:visibility="gone"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_horizontal"
            tools:src="@drawable/dummy_geometry" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/dummy_theory"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_option"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_question"
            app:layout_constraintBottom_toTopOf="@id/btnCheckAnswer"
            tools:listitem="@layout/item_option"
            tools:itemCount="4"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>